components/ads_8.1/ace.hpp

//-- type declarations -------------------------------------------------------
typedef char *PAceChar;
typedef char AceChar;
typedef int ADSHANDLE;
typedef int *PADSHANDLE;
typedef Word *PWord;
typedef Word UNSIGNED16;
typedef unsigned UNSIGNED32;
struct ADS_MGMT_USAGE_INFO
{
	
public:
	unsigned ulInUse;
	unsigned ulMaxUsed;
	unsigned ulRejected;
} ;
typedef ADS_MGMT_USAGE_INFO *pADS_MGMT_USAGE_INFO;
struct ADS_MGMT_UPTIME_INFO
{
	
public:
	Word usDays;
	Word usHours;
	Word usMinutes;
	Word usSeconds;
} ;
typedef ADS_MGMT_UPTIME_INFO *pADS_MGMT_UPTIME_INFO;
struct ADS_MGMT_ACTIVITY_INFO
{
	
public:
	unsigned ulOperations;
	unsigned ulLoggedErrors;
	ADS_MGMT_UPTIME_INFO stUpTime;
	ADS_MGMT_USAGE_INFO stUsers;
	ADS_MGMT_USAGE_INFO stConnections;
	ADS_MGMT_USAGE_INFO stWorkAreas;
	ADS_MGMT_USAGE_INFO stTables;
	ADS_MGMT_USAGE_INFO stIndexes;
	ADS_MGMT_USAGE_INFO stLocks;
	ADS_MGMT_USAGE_INFO stTpsHeaderElems;
	ADS_MGMT_USAGE_INFO stTpsVisElems;
	ADS_MGMT_USAGE_INFO stTpsMemoElems;
	ADS_MGMT_USAGE_INFO stWorkerThreads;
} ;
typedef ADS_MGMT_ACTIVITY_INFO *pADS_MGMT_ACTIVITY_INFO;
struct ADS_MGMT_USER_INFO
{
	
public:
	char aucUserName[50];
	Word usConnNumber;
	char aucDictionaryName[50];
	char aucAddress[30];
	char aucOSUserLoginName[50];
	char aucTSAddress[30];
} ;
typedef ADS_MGMT_USER_INFO *pADS_MGMT_USER_INFO;
typedef ADS_MGMT_USER_INFO ADSMgUserArray[200];
typedef ADSMgUserArray *PADSMgUserArray;
struct ADS_MGMT_TABLE_INFO
{
	
public:
	char aucTableName[260];
	Word usLockType;
} ;
typedef ADS_MGMT_TABLE_INFO *pADS_MGMT_TABLE_INFO;
typedef ADS_MGMT_TABLE_INFO ADSMgTableArray[200];
typedef ADSMgTableArray *PADSMgTableArray;
struct ADS_MGMT_INDEX_INFO
{
	
public:
	char aucIndexName[260];
} ;
typedef ADS_MGMT_INDEX_INFO *pADS_MGMT_INDEX_INFO;
typedef ADS_MGMT_INDEX_INFO ADSMgIndexArray[200];
typedef ADSMgIndexArray *PADSMgIndexArray;
struct ADS_MGMT_RECORD_INFO
{
	
public:
	unsigned ulRecordNumber;
} ;
typedef ADS_MGMT_RECORD_INFO *pADS_MGMT_RECORD_INFO;
typedef ADS_MGMT_RECORD_INFO ADSMgLocksArray[400];
typedef ADSMgLocksArray *PADSMgLocksArray;
struct ADS_MGMT_THREAD_ACTIVITY
{
	
public:
	unsigned ulThreadNumber;
	Word usOpCode;
	char aucUserName[50];
	Word usConnNumber;
	Word usReserved1;
	char aucOSUserLoginName[50];
} ;
typedef ADS_MGMT_THREAD_ACTIVITY *pADS_MGMT_THREAD_ACTIVITY;
typedef ADS_MGMT_THREAD_ACTIVITY ADSMgThreadsArray[50];
typedef ADSMgThreadsArray *PADSMgThreadsArray;
typedef unsigned __stdcall (*TStoredProcedure)(unsigned ulConnectionID, char * pucUserName, char * pucPassword, char * pucProcName, unsigned ulRecNum, char * pucTable1, char * pucTable2);
typedef unsigned __stdcall (*TStartupProcedure)(unsigned ulConnectionID, char * pucUserName, char * pucPassword);
typedef unsigned __stdcall (*TShutdownProcedure)(unsigned ulConnectionID, char * pucUserName, char * pucPassword);
struct ADD_FIELD_DESC
{
	
public:
	Word usFieldType;
	Word usFieldLength;
	Word usFieldDecimal;
} ;
extern "C" unsigned __stdcall AdsAddCustomKey(int hIndex);
extern "C" unsigned __stdcall AdsAppendRecord(int hTable);
extern "C" unsigned __stdcall AdsApplicationExit(void);
extern "C" unsigned __stdcall AdsAtBOF(int hTable, PWord pbBof);
extern "C" unsigned __stdcall AdsAtEOF(int hTable, PWord pbEof);
extern "C" unsigned __stdcall AdsBeginTransaction(int hConnect);
extern "C" unsigned __stdcall AdsBinaryToFile(int hTable, char * pucFieldName, char * pucFileName);
extern "C" unsigned __stdcall AdsBuildRawKey(int hIndex, char * pucKey, PWord pusLen);
extern "C" unsigned __stdcall AdsCacheOpenCursors(Word usOpen);
extern "C" unsigned __stdcall AdsCacheOpenTables(Word usOpen);
extern "C" unsigned __stdcall AdsCacheRecords(int hTable, Word usNumRecords);
extern "C" unsigned __stdcall AdsCancelUpdate(int hTable);
extern "C" unsigned __stdcall AdsCheckExistence(int hConnect, char * pucFileName, PWord pusOnDisk);
extern "C" unsigned __stdcall AdsClearAllScopes(int hTable);
extern "C" unsigned __stdcall AdsClearCallbackFunction(void);
extern "C" unsigned __stdcall AdsClearDefault(void);
extern "C" unsigned __stdcall AdsClearFilter(int hTable);
extern "C" unsigned __stdcall AdsClearProgressCallback(void);
extern "C" unsigned __stdcall AdsClearRelation(int hTableParent);
extern "C" unsigned __stdcall AdsClearScope(int hIndex, Word usScopeOption);
extern "C" unsigned __stdcall AdsCloneTable(int hTable, PADSHANDLE phClone);
extern "C" unsigned __stdcall AdsCloseAllIndexes(int hTable);
extern "C" unsigned __stdcall AdsCloseAllTables(void);
extern "C" unsigned __stdcall AdsCloseIndex(int hIndex);
extern "C" unsigned __stdcall AdsCloseTable(int hTable);
extern "C" unsigned __stdcall AdsCloseCachedTables(int hConnection);
extern "C" unsigned __stdcall AdsCommitTransaction(int hConnect);
extern "C" unsigned __stdcall AdsConnect(char * pucServerName, PADSHANDLE phConnect);
extern "C" unsigned __stdcall AdsConnect26(char * pucServerName, Word usServerOptions, PADSHANDLE phConnect);
extern "C" unsigned __stdcall AdsContinue(int hTable, PWord pbFound);
extern "C" unsigned __stdcall AdsConvertTable(int hObj, Word usFilterOption, char * pucFile, Word usTableType);