components/ads_8.1/ace.pas


ADS_MGMT_USAGE_INFO = record
   ulInUse:     UNSIGNED32;  { Number of items in use }
   ulMaxUsed:   UNSIGNED32;  { Max number of items ever used }
   ulRejected:  UNSIGNED32;  { Number of items rejected }
end;

   pADS_MGMT_USAGE_INFO = ^ADS_MGMT_USAGE_INFO;

ADS_MGMT_UPTIME_INFO = record
   usDays:      UNSIGNED16;  { Number of days server has been up }
   usHours:     UNSIGNED16;  { Number of hours server has been up }
   usMinutes:   UNSIGNED16;  { Number on minutes server has been up }
   usSeconds:   UNSIGNED16;  { Number of seconds server has been up }
end;

   pADS_MGMT_UPTIME_INFO = ^ADS_MGMT_UPTIME_INFO;

ADS_MGMT_ACTIVITY_INFO = record
   ulOperations:      UNSIGNED32;           { Number operations since started }
   ulLoggedErrors:    UNSIGNED32;           { Number logged errors }
   stUpTime:          ADS_MGMT_UPTIME_INFO; { Length of time ADS has been up }
   stUsers:           ADS_MGMT_USAGE_INFO;  { Users in use, max, rejected }
   stConnections:     ADS_MGMT_USAGE_INFO;  { Connections in use, max, rejected }
   stWorkAreas:       ADS_MGMT_USAGE_INFO;  { Work areas in use, max, rejected }
   stTables:          ADS_MGMT_USAGE_INFO;  { Tables in use, max, rejected }
   stIndexes:         ADS_MGMT_USAGE_INFO;  { Indexes in use, max, rejected }
   stLocks:           ADS_MGMT_USAGE_INFO;  { Locks in use, max, rejected }
   stTpsHeaderElems:  ADS_MGMT_USAGE_INFO;  { TPS header elems in use, max }
   stTpsVisElems:     ADS_MGMT_USAGE_INFO;  { TPS visibility elems in use, max }
   stTpsMemoElems:    ADS_MGMT_USAGE_INFO;  { TPS memo elems in use, max }
   stWorkerThreads:   ADS_MGMT_USAGE_INFO;  { Worker Threads in use, max }
end;

   pADS_MGMT_ACTIVITY_INFO = ^ADS_MGMT_ACTIVITY_INFO;

ADS_MGMT_USER_INFO = record
   aucUserName:  array[0..ADS_MAX_USER_NAME - 1] of AceChar;  { Name of connected user }
   usConnNumber: UNSIGNED16;                { NetWare conn num (NLM only) }
   aucDictionaryName: array[0..ADS_MAX_USER_NAME - 1] of AceChar;
   aucAddress: array[0..ADS_MAX_ADDRESS_SIZE - 1] of AceChar;
   aucOSUserLoginName: array[0..ADS_MAX_USER_NAME - 1] of AceChar; { OS User Login Name }
   aucTSAddress: array[0..ADS_MAX_ADDRESS_SIZE - 1] of AceChar; { Terminal Server Client IP address }
end;

   pADS_MGMT_USER_INFO = ^ADS_MGMT_USER_INFO;
   ADSMgUserArray = array[0..ADS_USER_ARRAY_SIZE - 1] of ADS_MGMT_USER_INFO;
   PADSMgUserArray = ^ADSMgUserArray;


ADS_MGMT_TABLE_INFO = record
   aucTableName: array[0..ADS_MGMT_MAX_PATH - 1] of AceChar;  { Fully qualified table name }
   usLockType:   UNSIGNED16;  { Advantage locking mode }
end;

   pADS_MGMT_TABLE_INFO = ^ADS_MGMT_TABLE_INFO;
   ADSMgTableArray = array[0..ADS_TABLE_ARRAY_SIZE - 1] of ADS_MGMT_TABLE_INFO;
   PADSMgTableArray = ^ADSMgTableArray;

ADS_MGMT_INDEX_INFO = record
   aucIndexName: array[0..ADS_MGMT_MAX_PATH - 1] of AceChar;   { Fully qualified index name }
end;

   pADS_MGMT_INDEX_INFO = ^ADS_MGMT_INDEX_INFO;
   ADSMgIndexArray = array[0..ADS_INDEX_ARRAY_SIZE - 1] of ADS_MGMT_INDEX_INFO;
   PADSMgIndexArray = ^ADSMgIndexArray;

ADS_MGMT_RECORD_INFO = record
   ulRecordNumber:  UNSIGNED32;  { Record number that is locked }
end;

   pADS_MGMT_RECORD_INFO = ^ADS_MGMT_RECORD_INFO;
   ADSMgLocksArray = array[0..ADS_LOCK_ARRAY_SIZE - 1] of ADS_MGMT_RECORD_INFO;
   PADSMgLocksArray = ^ADSMgLocksArray;

ADS_MGMT_THREAD_ACTIVITY = record
   ulThreadNumber: UNSIGNED32;                { Thread Number               }
   usOpCode:       UNSIGNED16;                { Operation in progress       }
   aucUserName:    array[0..ADS_MAX_USER_NAME - 1] of AceChar;  { Name of user }
   usConnNumber:   UNSIGNED16;                { NetWare conn num (NLM only) }
   usReserved1:    UNSIGNED16;                { Reserved                    }
   aucOSUserLoginName: array[0..ADS_MAX_USER_NAME - 1] of AceChar; { OS User Login Name }
end;

   pADS_MGMT_THREAD_ACTIVITY = ^ADS_MGMT_THREAD_ACTIVITY;
   ADSMgThreadsArray = array[0..ADS_THREAD_ARRAY_SIZE - 1] of ADS_MGMT_THREAD_ACTIVITY;
   PADSMgThreadsArray = ^ADSMgThreadsArray;


   { This data type defines the type of function that will be called by the
     Advantage Server when an Advantage Stored Procedure is called.  See the
     Documentation for stored procedures for more information. }
   TStoredProcedure = function
      (
      ulConnectionID : UNSIGNED32; { (I) value used to associate a user/connection }
                                   {     and can be used to track the state        }
      pucUserName    : PAceChar;      { (I) the user name who invoked this procedure  }
      pucPassword    : PAceChar;      { (I) the user's password in encrypted form     }
      pucProcName    : PAceChar;      { (I) the stored procedure name                 }
      ulRecNum       : UNSIGNED32; { (I) reserved for triggers                     }
      pucTable1      : PAceChar;      { (I) table one.  For Stored Proc this table    }
                                   {     contains all input parameters.  For       }
                                   {     triggers, it contains the original field  }
                                   {     values if the trigger is an OnUpdate or   }
                                   {     OnDelete                                  }
      pucTable2      : PAceChar       { (I) table two.  For Stored Proc this table    }
                                   {     is empty and the users function will      }
                                   {     optionally add rows to it as output.      }
                                   {     For triggers, it contains the new field   }
                                   {     values if the trigger is an OnUpdate or   }
                                   {     OnInsert                                  }
      ) : UNSIGNED32; {$IFDEF WIN32}stdcall;{$ENDIF}{$IFDEF LINUX}cdecl;{$ENDIF}


   { This data type defines what the startup function that will be called once
     by the Advantage Server when an user connects and prepares to execute a stored
     procedure. }
   TStartupProcedure = function
      (
      ulConnectionID : UNSIGNED32; { (I) value used to associate a user/connection }
                                   {     and can be used to track the state        }
      pucUserName    : PAceChar;      { (I) the user name who invoked this procedure  }
      pucPassword    : PAceChar       { (I) the user's password in encrypted form     }
      ) : UNSIGNED32; {$IFDEF WIN32}stdcall;{$ENDIF}{$IFDEF LINUX}cdecl;{$ENDIF}


   { This data type defines what the shutdown function that will be called once
     by the Advantage Server when an user disconnects after having executed stored
     procedures. }
   TShutdownProcedure = function
      (
      ulConnectionID : UNSIGNED32; { (I) value used to associate a user/connection }
                                   {     and can be used to track the state        }
      pucUserName    : PAceChar;      { (I) the user name who invoked this procedure  }
      pucPassword    : PAceChar       { (I) the user's password in encrypted form     }
      ) : UNSIGNED32; {$IFDEF WIN32}stdcall;{$ENDIF}{$IFDEF LINUX}cdecl;{$ENDIF}


{ Data dictionary properties related constants and structure }
ADD_FIELD_DESC = record
   usFieldType:    UNSIGNED16;
   usFieldLength:  UNSIGNED16;
   usFieldDecimal: UNSIGNED16;
end;


{ function declarations }
   function AdsAddCustomKey( hIndex: ADSHANDLE ):UNSIGNED32; {$IFDEF WIN32}stdcall;{$ENDIF}{$IFDEF LINUX}cdecl;{$ENDIF}

   function AdsAppendRecord( hTable: ADSHANDLE ):UNSIGNED32; {$IFDEF WIN32}stdcall;{$ENDIF}{$IFDEF LINUX}cdecl;{$ENDIF}

   function AdsApplicationExit: UNSIGNED32; {$IFDEF WIN32}stdcall;{$ENDIF}{$IFDEF LINUX}cdecl;{$ENDIF}

   function AdsAtBOF( hTable: ADSHANDLE;
                      pbBof: pWord ):UNSIGNED32; {$IFDEF WIN32}stdcall;{$ENDIF}{$IFDEF LINUX}cdecl;{$ENDIF}

   function AdsAtEOF( hTable: ADSHANDLE;
                      pbEof: pWord ):UNSIGNED32; {$IFDEF WIN32}stdcall;{$ENDIF}{$IFDEF LINUX}cdecl;{$ENDIF}

   function AdsBeginTransaction( hConnect:ADSHANDLE ):UNSIGNED32; {$IFDEF WIN32}stdcall;{$ENDIF}{$IFDEF LINUX}cdecl;{$ENDIF}

   function AdsBinaryToFile( hTable: ADSHANDLE;
                             pucFieldName: PAceChar;
                             pucFileName: PAceChar ):UNSIGNED32; {$IFDEF WIN32}stdcall;{$ENDIF}{$IFDEF LINUX}cdecl;{$ENDIF}

   function AdsBuildRawKey( hIndex: ADSHANDLE;
                            pucKey: PAceChar;
                            pusLen: pWord ): UNSIGNED32; {$IFDEF WIN32}stdcall;{$ENDIF}{$IFDEF LINUX}cdecl;{$ENDIF}

   function AdsCacheOpenTables( usOpen: Word ):UNSIGNED32; {$IFDEF WIN32}stdcall;{$ENDIF}{$IFDEF LINUX}cdecl;{$ENDIF}

   function AdsCacheOpenCursors( usOpen: Word ):UNSIGNED32; {$IFDEF WIN32}stdcall;{$ENDIF}{$IFDEF LINUX}cdecl;{$ENDIF}

   function AdsCacheRecords( hTable: ADSHANDLE;
                             usNumRecords : WORD ):UNSIGNED32; {$IFDEF WIN32}stdcall;{$ENDIF}{$IFDEF LINUX}cdecl;{$ENDIF}

   function AdsCancelUpdate( hTable: ADSHANDLE ):UNSIGNED32; {$IFDEF WIN32}stdcall;{$ENDIF}{$IFDEF LINUX}cdecl;{$ENDIF}

   function AdsCheckExistence( hConnect: ADSHANDLE;
                               pucFileName: PAceChar;
                               pusOnDisk: pWord ):UNSIGNED32; {$IFDEF WIN32}stdcall;{$ENDIF}{$IFDEF LINUX}cdecl;{$ENDIF}

   function AdsClearAllScopes( hTable: ADSHANDLE ):UNSIGNED32; {$IFDEF WIN32}stdcall;{$ENDIF}{$IFDEF LINUX}cdecl;{$ENDIF}

   function AdsClearCallbackFunction: UNSIGNED32; {$IFDEF WIN32}stdcall;{$ENDIF}{$IFDEF LINUX}cdecl;{$ENDIF}

   function AdsClearDefault: UNSIGNED32; {$IFDEF WIN32}stdcall;{$ENDIF}{$IFDEF LINUX}cdecl;{$ENDIF}

   function AdsClearFilter( hTable: ADSHANDLE ):UNSIGNED32; {$IFDEF WIN32}stdcall;{$ENDIF}{$IFDEF LINUX}cdecl;{$ENDIF}

   function AdsClearProgressCallback: UNSIGNED32; {$IFDEF WIN32}stdcall;{$ENDIF}{$IFDEF LINUX}cdecl;{$ENDIF}

   function AdsClearRelation( hTableParent: ADSHANDLE ):UNSIGNED32; {$IFDEF WIN32}stdcall;{$ENDIF}{$IFDEF LINUX}cdecl;{$ENDIF}

   function AdsClearScope( hIndex: ADSHANDLE;
                           usScopeOption: Word ): UNSIGNED32; {$IFDEF WIN32}stdcall;{$ENDIF}{$IFDEF LINUX}cdecl;{$ENDIF}

   function AdsCloneTable( hTable: ADSHANDLE;
                           phClone: pADSHANDLE ): UNSIGNED32; {$IFDEF WIN32}stdcall;{$ENDIF}{$IFDEF LINUX}cdecl;{$ENDIF}

   function AdsCloseAllIndexes( hTable: ADSHANDLE ):UNSIGNED32; {$IFDEF WIN32}stdcall;{$ENDIF}{$IFDEF LINUX}cdecl;{$ENDIF}

   function AdsCloseAllTables: UNSIGNED32; {$IFDEF WIN32}stdcall;{$ENDIF}{$IFDEF LINUX}cdecl;{$ENDIF}

   function AdsCloseIndex( hIndex: ADSHANDLE ):UNSIGNED32; {$IFDEF WIN32}stdcall;{$ENDIF}{$IFDEF LINUX}cdecl;{$ENDIF}

   function AdsCloseTable( hTable: ADSHANDLE ): UNSIGNED32; {$IFDEF WIN32}stdcall;{$ENDIF}{$IFDEF LINUX}cdecl;{$ENDIF}

   function AdsCloseCachedTables( hConnection: ADSHANDLE ): UNSIGNED32; {$IFDEF WIN32}stdcall;{$ENDIF}{$IFDEF LINUX}cdecl;{$ENDIF}

   function AdsCommitTransaction( hConnect: ADSHANDLE ): UNSIGNED32; {$IFDEF WIN32}stdcall;{$ENDIF}{$IFDEF LINUX}cdecl;{$ENDIF}

   function AdsConnect( pucServerName: PAceChar;
                        phConnect:pADSHANDLE ): UNSIGNED32; {$IFDEF WIN32}stdcall;{$ENDIF}{$IFDEF LINUX}cdecl;{$ENDIF}

   function AdsConnect26( pucServerName: PAceChar;
                        usServerOptions: Word;
                        phConnect:pADSHANDLE ): UNSIGNED32; {$IFDEF WIN32}stdcall;{$ENDIF}{$IFDEF LINUX}cdecl;{$ENDIF}


   function AdsContinue( hTable: ADSHANDLE;
                         pbFound: pWord ): UNSIGNED32; {$IFDEF WIN32}stdcall;{$ENDIF}{$IFDEF LINUX}cdecl;{$ENDIF}

   function AdsConvertTable( hObj: ADSHANDLE;
                             usFilterOption : Word;
                             pucFile: PAceChar;
                             usTableType: Word ): UNSIGNED32; {$IFDEF WIN32}stdcall;{$ENDIF}{$IFDEF LINUX}cdecl;{$ENDIF}
